# coin

./: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
app/: NodeContext.tsx  layout.tsx
app/components/key-management/: key-manager.tsx  key-storage.ts
app/components/mining/: mining-dashboard.tsx  mining-log.tsx  mining-stats.tsx
app/components/transactions/: transaction-form.tsx  transaction-list.tsx
app/components/ui/: Button.tsx  Input.tsx
app/mempool/: page.tsx
app/mine/: page.tsx
app/peers/: page.tsx
app/tx/: page.tsx
app/wallet/: page.tsx
lib/: db.ts  secureStore.ts  substrateApi.ts
substrate-node/: Cargo.toml  benchmark.js  index.js  package.json
substrate-node/node/: Cargo.toml
substrate-node/node/src/: kem_keystore.rs  main.rs  pow.rs  rpc.rs  service.rs  transport.rs
substrate-node/pallets/basic-pallet/: Cargo.toml
substrate-node/pallets/basic-pallet/src/: lib.rs
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs
substrate-node/src/: lib.rs  shader.wgsl
tests/e2e/: substrate.spec.ts  tx.spec.ts
