 [package]
 name = "pow-kernel"
 version = "0.1.0"
 edition = "2021"

 [lib]
 crate-type = ["cdylib"]

 [dependencies]
 wgpu = "0.14"
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 blake3 = "1.3"
 once_cell = "1.9"
 wasm-bindgen-futures = "0.4"
 bytemuck = "1.9"

 [features]
 default = ["gpu"]
 gpu = []
 cpu = []