 [package]
 name = "pow-kernel"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 blake3 = "1.8"

 [features]
 default = []

 [workspace]
 members = [
     ".", # The root pow-kernel crate
     "runtime",
     "pallets/basic-pallet",
     # "node", # Missing node directory
 ]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
