[package]
name = "node"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sc-service     = { git = "https://github.com/paritytech/substrate.git", package = "sc-service",     branch = "master", default-features = false }
sc-cli         = { git = "https://github.com/paritytech/substrate.git", package = "sc-cli",         branch = "master", default-features = false }
sc-network     = { git = "https://github.com/paritytech/substrate.git", package = "sc-network",     branch = "master", default-features = false }
sc-client      = { git = "https://github.com/paritytech/substrate.git", package = "sc-client",      branch = "master", default-features = false }
sc-client-api  = { git = "https://github.com/paritytech/substrate.git", package = "sc-client-api", branch = "master", default-features = false }
sc-consensus    = { git = "https://github.com/paritytech/substrate.git", package = "sc-consensus",  branch = "master", default-features = false }
sc-finality     = { git = "https://github.com/paritytech/substrate.git", package = "sc-finality-grandpa", branch = "master", default-features = false }
pqcrypto-kyber      = "0.7"
pqcrypto-dilithium  = "0.7"
blake3              = "1.4"
libp2p              = { version = "0.51", features = ["tcp-tokio", "dns-tokio", "quic"] }
substrate-client = { package = "client", path = "../runtime" }
sp-api          = { git = "https://github.com/paritytech/substrate.git", package = "sp-api", branch = "master", default-features = false }
sc-consensus-manual = { git = "https://github.com/paritytech/substrate.git", package = "sc-consensus-manual", branch = "master", default-features = false, features = ["manual-engine"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros"] }
wasm-bindgen       = { version = "0.2", features = ["serde-serialize"] }
jsonrpsee          = { version = "0.15", default-features = false, features = ["http_server", "ws_server", "macros"] }

# PQC Keystore support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
fs2 = "0.4"
zeroize = "1.4"
aes-gcm = "0.10"
rand = "0.8"

[features]
default = ["std"]
std = []