[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-core        = { version = "13.0.0", default-features = false }
sp-std         = { version = "12.0.0", default-features = false } # v12 for sp-std
frame-support  = { version = "26.0.0", default-features = false } # v26 for frame
frame-system   = { version = "26.0.0", default-features = false }
pow-kernel     = { path = "..", default-features = false }
pqcrypto-kyber      = "0.7"
pqcrypto-dilithium  = "0.5.0"
pallet-basic-pallet = { path = "../pallets/basic-pallet" }
pallet-balances = { version = "24.0.0", default-features = false } # v24 for pallets
blake3         = "1.8"
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false } # Bumped codec
primitive-types= { version = "0.12", default-features = false } # For U256
sp-api         = { version = "13.0.0", default-features = false }
getrandom      = { version = "0.2", features = ["js"], default-features = false } # Enable js feature for wasm32 target

[features]
default = ["std"]
std = [
  "sp-core/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std", # Add std for codec
  "pallet-basic-pallet/std",
  "pallet-balances/std"
]