[package]
name = "pallet-basic-pallet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frame-support = { version = "26.0.0", default-features = false }
frame-system  = { version = "26.0.0", default-features = false }
sp-std         = { version = "12.0.0", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-std/std"
]